add flare proceeding link

--- a/projects/flare/index.html
+++ b/projects/flare/index.html
@@ -126,12 +126,12 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://to appear"
+                <a href="https://ojs.aaai.org/index.php/AAAI/article/view/32455"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper (to appear)</span>
+                  <span>Paper</span>
                 </a>
               </span>
               <span class="link-block">
@@ -343,7 +343,7 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>@inproceedings{kim2025multimodal,
       author    = {Kim, Taewoong and Kim, Byeonghwi and Choi, Jonghyun},
-      title     = {Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with A Few Examples},
+      title     = {Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with a Few Examples},
       booktitle = {AAAI},
       year      = {2025}
     }</code></pre>
